--- a/base.css
+++ b/base.css
@@ -554,7 +554,7 @@ textarea {
 	outline: none;
 	margin: 0;
 	border-radius: 0.25rem;
-	box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.4);
+	// box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.4);
 	color: inherit;
 	font-family: inherit;
 	font-size: var(--h7);
@@ -613,7 +613,7 @@ textarea {
 [type="url"]:focus,
 [type="password"]:focus,
 textarea:focus {
-	box-shadow: inset 0 0 0 1px dodgerblue
+	// box-shadow: inset 0 0 0 1px dodgerblue
 }
 
 select {
