--- a/style.css
+++ b/style.css
@@ -144,7 +144,8 @@ header .inputGroup:focus-within {
 .guages {
 	position: relative;
 	max-width: 900px;
-	background: #f7f7f7
+	background: #f7f7f7;
+	height: 100%
 }
 
 @media (min-width: 800px) {
@@ -181,6 +182,8 @@ header .inputGroup:focus-within {
 	top: 0;
 	right: 0;
 	bottom: 0;
+	display: grid;
+	grid-template-rows: auto auto auto auto 1fr;
 	width: 100%;
 	max-width: 630px;
 	background: #f7f7f7;
@@ -209,14 +212,64 @@ header .inputGroup:focus-within {
 	}
 }
 
-.detail .body {
-	padding: 1rem
+.detail .graph {
+	padding: 0 1rem;
+	display: grid
 }
 
-@media (min-width: 400px) {
-	.detail .body {
-		padding: 1rem 2rem
+@media (min-width: 600px) {
+	.detail .graph {
+		padding: 0 2rem
 	}
+}
+
+.detail .graph>* {
+	grid-area: 1/1/1/1
+}
+
+.detail .swipeMask {
+	z-index: 55
+}
+
+.detail img,
+.detail svg {
+	width: 100%;
+	height: auto;
+	margin: 1rem 0;
+	user-select: none
+}
+
+.detail svg {
+	background: #cccccc80
+}
+
+.detail .row {
+	padding: 0.25rem 2rem;
+	display: grid;
+	grid-auto-flow: column;
+	justify-content: space-between;
+	grid-gap: 1rem
+}
+
+.detail .row time,
+.detail .row a,
+.detail .row .flow {
+	user-select: none
+}
+
+.detail .row select {
+	border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+	border-radius: 0;
+	cursor: pointer
+}
+
+.detail .fav {
+	display: grid;
+	place-items: center center
+}
+
+.detail .fav .icon {
+	cursor: pointer
 }
 
 .about {
