--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ header .inputGroup:focus-within {
 	top: 1rem;
 	left: 4rem;
 	font-family: "Inconsolata", "Monaco", "Menlo", "Consolas", "Courier New", Courier, monospace;
-	z-index: -1
+	// z-index: -1;
 }
 
 .loader div {
