--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 #app {
 	height: 100vh;
-	padding-top: 4rem
+	padding-top: 5rem
 }
 
 header {
@@ -9,7 +9,7 @@ header {
 	top: 0;
 	right: 0;
 	left: 0;
-	height: 4rem;
+	height: 5rem;
 	background: #f7f7f7;
 	display: grid;
 	grid-template-columns: auto auto;
@@ -70,6 +70,11 @@ header .outerGroup {
 	grid-gap: 0.5rem
 }
 
+header .outerGroup .btnAbout {
+	z-index: 25;
+	font-size: 2.5rem
+}
+
 header .inputGroup {
 	display: grid;
 	grid-auto-flow: column;
@@ -89,6 +94,10 @@ header .inputGroup:focus-within {
 	box-shadow: 0 1px 0 0 dodgerblue
 }
 
+.list {
+	padding: 0 1rem
+}
+
 @media (min-width: 400px) {
 	.list {
 		padding: 0 1rem
@@ -100,15 +109,21 @@ header .inputGroup:focus-within {
 	grid-template-columns: auto auto;
 	justify-content: space-between;
 	align-items: center;
-	grid-gap: 0 1rem;
-	padding: 0.708rem 1rem;
+	grid-gap: 0 2rem;
+	padding: 0.85rem 0;
 	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 	cursor: pointer
 }
 
+@media (min-width: 400px) {
+	.listItem {
+		padding: 0.85rem 1rem
+	}
+}
+
 .closeMenu {
 	position: fixed;
-	top: 4.75rem;
+	top: 6rem;
 	right: 2rem;
 	z-index: 15;
 	cursor: pointer
@@ -126,7 +141,7 @@ header .inputGroup:focus-within {
 
 .states {
 	position: fixed;
-	top: 4rem;
+	top: 5rem;
 	right: 0;
 	left: 0;
 	bottom: 0;
@@ -143,7 +158,7 @@ header .inputGroup:focus-within {
 
 .guages {
 	position: relative;
-	max-width: 900px;
+	max-width: 800px;
 	background: #f7f7f7;
 	height: 100%
 }
@@ -156,10 +171,9 @@ header .inputGroup:focus-within {
 
 .loader {
 	position: absolute;
-	top: 1rem;
+	top: 1.5rem;
 	left: 4rem;
-	font-family: "Inconsolata", "Monaco", "Menlo", "Consolas", "Courier New", Courier, monospace;
-	// z-index: -1;
+	font-family: "Inconsolata", "Monaco", "Menlo", "Consolas", "Courier New", Courier, monospace
 }
 
 .loader div {
@@ -191,7 +205,7 @@ header .inputGroup:focus-within {
 }
 
 .detail .header {
-	min-height: 4rem;
+	min-height: 5rem;
 	display: grid;
 	grid-template-columns: auto auto;
 	justify-content: space-between;
@@ -273,7 +287,43 @@ header .inputGroup:focus-within {
 }
 
 .about {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	display: grid;
+	grid-auto-flow: row;
+	align-content: space-between;
+	background-color: #f7f7f7;
 	z-index: 40
+}
+
+.about .aboutText {
+	display: grid;
+	grid-template-columns: auto auto;
+	justify-content: space-between;
+	align-items: start;
+	grid-gap: 0 1rem;
+	height: 5rem;
+	padding: 1rem 2rem
+}
+
+.about .aboutText .description {
+	font-size: var(--h5);
+	max-width: 70vw
+}
+
+@media (min-width: 500px) {
+	.about .aboutText .description {
+		font-size: var(--h4)
+	}
+}
+
+.about .river {
+	display: block;
+	width: 100%;
+	max-height: 90vh
 }
 
 @keyframes spinner {
